--- a/data/config.json
+++ b/data/config.json
@@ -238,7 +238,8 @@
                                 "path": "show",
                                 "reply": "emojie settings: \n```json\n{emojie_setting}\n```\nemojis **in** list: {emojie_list_in}\nemojis **out** list: {emojie_list_out}",
                                 "json_option": 4,
-                                "separator": " "
+                                "separator": " ",
+                                "none": "no emojis"
                             }
                         }
                     }
