change default channels for twitch bot now they fetch from settings, rather from channels that has subscription

--- a/data/config.json
+++ b/data/config.json
@@ -296,7 +296,10 @@
         "channels": [
             "#status#",
             "#allan_walpy",
-            "#jackshepardtwitch"
+            "#jackshepardtwitch",
+            "#manvsgame",
+            "#jesusavgn",
+            "#sodapoppin"
         ],
         "status": "#status#",
         "event": [
