add bot owner filter to ./discord/command/reboot

--- a/data/config.json
+++ b/data/config.json
@@ -167,7 +167,7 @@
                             "reboot",
                             "restart"
                         ],
-                        "reply": "killing process"
+                        "reply": "killing procces"
                     },
                     "add": {
                         "path": "add",
