update forever scripts

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
         "botty-install-linux": "sudo npm install -g forever",
         "botty-install-win": "npm install -g forever",
         "botty-install": "npm run-script botty-install-linux || npm run-script botty-install-win",
-        "start": "forever start -f ./src/main.js",
-        "stop": "forever stop ./src/main.js"
+        "start": "forever -f -l ~/log/twitch.log start ./src/main.js",
+        "stop": "forever stop ./src/main.js",
+        "status": "forever list"
     }
 }
