--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
         "botty-install-linux": "sudo npm install -g forever",
         "botty-install-win": "npm install -g forever",
         "botty-install": "npm run-script botty-install-linux || npm run-script botty-install-win",
+        "start-debug-linux": "nodejs --use-strict ./src/main.js",
+        "start-debug-win": "node --use-strict ./src/main.js",
+        "start-debug": "npm run-script start-debug-linux || npm run-script start-debug-win",
         "start": "forever -f -l ~/log/twitch.log --append start ./src/main.js",
         "stop": "forever stop ./src/main.js",
         "status": "forever list"
