#9 start of test;

--- a/data/config.json
+++ b/data/config.json
@@ -417,7 +417,12 @@
             "#jackshepardtwitch",
             "#manvsgame",
             "#jesusavgn",
-            "#sodapoppin"
+            "#sodapoppin",
+            "#blackufa_twitch",
+            "#b1trat3",
+            "#northdevil",
+            "#revolucius",
+            "#stariktwitch"
         ],
         "status": "#status#",
         "event": [
