--- a/data/config.json
+++ b/data/config.json
@@ -150,7 +150,7 @@
                             "about",
                             "info"
                         ],
-                        "reply": "{name} v{version} by {author.name} licensed under {license}\n\nhomepage: {homepage}\n\nbugs: {bugs.url}\n\nauthor's page: {author.url}"
+                        "reply": "{name} v{version} by {author.name} лицензия {license}\n\nстраница бота <{homepage}>\n\nбаги писать сюда <{bugs.url}>\n\nстраничка автора <{author.url}>\n\nдонут <donatepage>"
                     },
                     "help": {
                         "path": "help",
